Renamed movie details fragment (fragment name shouldn't have the word activity in it)

--- a/Movies/app/src/main/AndroidManifest.xml
+++ b/Movies/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetailActivity"
+            android:name=".MovieDetailsActivity"
             android:label="@string/title_activity_detail" >
         </activity>
         <activity
